syntax = "proto3";
option go_package = ".;pb";
package pb;

message GetServicesRequest {}

message GetServicesResponse {
    message Service {
        string name = 1;
        string value = 2;
    }
    string status_code = 1;
    string reason_code = 2;
    string reason_message = 3;
    repeated Service details = 4;
}

message GetCountriesRequest {}

message GetCountriesResponse {
    message Country {
        string name = 1;
        string value = 2;
    }
    string status_code = 1;
    string reason_code = 2;
    string reason_message = 3;
    repeated Country details = 4;
}